@@ -14,9 +14,9 @@ test_that("Summary", {
   instance <- test()
   df <- summary(instance)
   expect_is(df, "data.frame")
-  expect_equal(nrow(df), 6)
-  expect_equal(sort(rownames(df)), 
-               sort(c("doSomething", "self", "x", "x.validity", "x.x", ".y")))
+  expect_equal(nrow(df), 7)
+  expect_equal(sort(df$Name), 
+               sort(c("doSomething", "self", ".self", "x", "x.validity", "x.x", ".y")))
   
   removeClass("test")
 })
